--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=assessment
+
+# Database connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/assessment_db
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Enable SQL logging
+spring.jpa.show-sql=true
+
+# Logging (optional)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
